Alignment fix

--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1 {
 
 .gallery {
 	font-size: 110%;
+	padding-left: 300px;
 }
 
 h2 {
@@ -56,8 +57,8 @@ h2 {
 }
 
 .bike {
-	height: 600px;
-	width: 450px;
+	height: 440px;
+	width: 330px;
 }
 
 .mapZoom {
